# Parcial-II

./: Codigo Parcial II comprimido.rar  Contextualización-Parcial II..docx  Informe Parcial II.docx  Link del video de youtube.txt
Codigo Parcial II/Parcial2_Sebastian - copia (2)/: CMakeLists.txt  eficiencia.cpp  eficiencia.cpp.autosave  eficiencia.h  jugadores.cpp  jugadores.h  main.cpp  reglas.cpp  reglas.h  reglas.h.autosave  tablero.cpp  tablero.cpp.autosave  tablero.h
Codigo Parcial II/build-Parcial2_Sebastian-Ejecutar-Debug - copia/: .ninja_deps  .ninja_log  CMakeCache.txt  Historial.txt  build.ninja  cmake_install.cmake
Codigo Parcial II/build-Parcial2_Sebastian-Ejecutar-Debug - copia/.cmake/api/v1/reply/: cache-v2-1bd68996e450f95510c2.json  cmakeFiles-v1-a4371dee1ff88ef3cbe1.json  codemodel-v2-dd7115682c7149655ced.json  directory-.-Debug-c1afc02150eaf9182700.json  index-2023-10-31T22-05-21-0957.json  target-Parcial2_Sebastian-Debug-54d2d7e00ac413e6985e.json
Codigo Parcial II/build-Parcial2_Sebastian-Ejecutar-Debug - copia/.cmake/api/v1/reply.prev/: codemodel-v2-a8cc81c8499c5ea59fe9.json  directory-.-Debug-c3e14f64842dfa6e4f6e.json  index-2023-10-31T01-55-24-0990.json  target-Parcial2_Sebastian-Debug-1af45fd5de17c70b8542.json
Codigo Parcial II/build-Parcial2_Sebastian-Ejecutar-Debug - copia/.qtc_clangd/: compile_commands.json
Codigo Parcial II/build-Parcial2_Sebastian-Ejecutar-Debug - copia/.qtc_clangd/.cache/clangd/index/: eficiencia.cpp.E823D90ED622051D.idx  eficiencia.h.4E8F32B1899A8909.idx  jugadores.cpp.384F8FF96C0D75CB.idx  (+6 more)
